El Commit para composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "serhii/saludo",
+    "name": "hztpaserg/saludo",
     "version": "1.0.0",
     "description": "Libreria en PHP para generar saludos",
     "main": "carrouselConObjetos.js",
